fixed overlapping text on mini maps

--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -129,14 +129,14 @@
 	margin 0 auto
 	position relative
 	top 0
-	width 30px
+	width 35px
 	display block
 	&.is-truncated
 		display none
 
-		svg
-			width 30
-			height 30
+	svg
+		width 35px
+		height 35px
 
 @keyframes UpDown {
   0%, 100% {
